--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -1,32 +1,39 @@
 body {
   background-color: gray;
-  max-width: 1440px;
   margin: 0 auto;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   color: #FFF;
   font-size: 2rem;
   font-weight: 700;
-}
-.container {
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 90vh;
+  justify-content: space-between;
+}
+.player {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  position: relative;
+  border: 1px solid #000;
+}
+#trackCover {
+  width: 100%;
 }
 .box {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: end;
-  height: 350px;
-  width: 500px;
-  border: 1px solid #000;
   padding: 20px;
-
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-color: gray;
 }
 /* .box:hover {
   transform: scale(1.2);
@@ -81,6 +88,16 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
+  background-color: #FFF;
+  color: #000;
+  width: 50%;
+  margin: 0 auto;
+  opacity: 0.5;
+  border-radius: 10px;
+}
+.user__github {
+  transform: scale(0.5);
 }
 /* .user__github :hover {
   transform: scale(1.2);
@@ -91,6 +108,6 @@ footer {
   transition: scale 0.5s;
 } */
 .rs-school__logo {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
 }
