--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -1,15 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
 body {
   background-color: gray;
   margin: 0 auto;
   width: 100vw;
   height: 100vh;
   color: #FFF;
-  font-size: 2rem;
-  font-weight: 700;
+
+  font-family: 'Roboto';
+  /* font-size: 2rem; */
+  /* font-weight: 700; */
 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  z-index: 0;
 
   display: flex;
   flex-direction: column;
@@ -17,16 +22,13 @@ body {
   justify-content: space-between;
 }
 .player {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; */
   position: relative;
-  border: 1px solid #000;
+  top: 10px;
+  border-radius: 25px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-#trackCover {
-  width: 100%;
-}
+#trackCover { width: 100%; }
 .box {
   display: flex;
   flex-direction: column;
@@ -35,10 +37,6 @@ body {
   padding: 20px;
   background-color: gray;
 }
-/* .box:hover {
-  transform: scale(1.2);
-  transition: all 0.5s;
-} */
 .control__box {
   display: flex;
   flex-direction: row;
@@ -54,14 +52,22 @@ body {
 }
 button {
   width: 55px;
-  height: 47px;
+  height: 55px;
+  border: 1px solid #000;
+  border-radius: 30px;
+  background-color: transparent;
 }
+button:hover { background-color: aliceblue; }
+button:active { transform: scale(0.9); }
 .hide{display: none;}
 #progressBar{width: 300px;}
-.time_box {
-  display: flex;
-  flex-direction: column;
+p { margin: 0; }
+#trackTitle {
+  font-weight: 100;
+  font-size: 1.5rem;
+  /* margin-bottom: 5px; */
 }
+.time__box { margin-bottom: 10px; }
 .time__range {
   display: flex;
   justify-content: space-between;
@@ -73,17 +79,15 @@ button {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  height: 130px;
-  width: 100px;
+  height: 150px;
+  width: 80px;
 }
 #volumeControl {
   display: block;
   transform: rotate(-90deg);
   background-color: red;
 }
-#mute {
-  display: block;
-}
+#mute { display: block; }
 footer {
   display: flex;
   flex-direction: row;
@@ -91,22 +95,22 @@ footer {
   align-items: center;
   background-color: #FFF;
   color: #000;
-  width: 50%;
+  width: 100%;
+  max-width: 430px;
   margin: 0 auto;
   opacity: 0.5;
-  border-radius: 10px;
+  border-radius: 20px;
+  position: relative;
+  bottom: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.user__github {
-  transform: scale(0.5);
+.footer__year {
+  font-size: 1.3rem;
+  font-weight: 500;
 }
-/* .user__github :hover {
-  transform: scale(1.2);
-  transition: all 0.5s;
-} */
-/* .rs_school :hover {
-  transform: scale(1.2);
-  transition: scale 0.5s;
-} */
+.user__github { transform: scale(0.5); }
+.user__github :hover > path { fill: gold; }
+.rs_school :hover > path { fill: gold; }
 .rs-school__logo {
   width: 100px;
   height: 100px;
