--- a/image-gallery/style.css
+++ b/image-gallery/style.css
@@ -7,12 +7,13 @@ body { background-color: gray; }
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
 
   .container {
     width: 90%;
     margin: 0 10px;
 
-    .search { position: relative; }
+    .search__form { position: relative; }
     .search__input {
       padding: 5px 0 5px 10px;
       border-radius: 5px;
@@ -70,6 +71,7 @@ body { background-color: gray; }
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
   background-color: #8E8E8E;
   height: 60px;
+  border-radius: 10px;
 
   .footer__year {
     font-size: 1.3rem;
